--- a/RickAndMorty/Resources/Strings/ru.lproj/Localizable.strings
+++ b/RickAndMorty/Resources/Strings/ru.lproj/Localizable.strings
@@ -1,22 +1,3 @@
-"characters" = "Characters";
-
-"name" = "Name: ";
-"status" = "Status: ";
-"Alive" = "Alive";
-"Dead" = "Dead";
-"unknown" = "unknown";
-"last_known_location" = "Last known location: ";
-"first_seen_in" = "First seen in: ";
-
-"English" = "English";
-
-"sure_to_refresh_table_question" = "Sure you want to reload all data?";
-"sure_to_refresh_table_description" = "It will erase all the cached data and reload it from Internet";
-"confirm_refreshing" = "Yes, I'm sure";
-"cancel_refreshing" = "Cancel";
-
-
-
 "characters" = "Персонажи";
 
 "name" = "Имя: ";
@@ -27,7 +8,7 @@
 "last_known_location" = "Последний раз был: ";
 "first_seen_in" = "Впервые появился в серии: ";
 
-"Russian" = "Русский";
+"ru" = "Русский";
 
 "sure_to_refresh_table_question" = "Вы уверены что хотите загрузить персонажей заново?";
 "sure_to_refresh_table_description" = "Это удалит всю кэшированную информацию и загрусит заново из интернета";
